--- a/templates/store/producto_detalle.html
+++ b/templates/store/producto_detalle.html
@@ -67,7 +67,8 @@
 
                         {% if un_producto.stock < 1 %} <h5>Ups, no tenemos stock de este producto 😅</h5>
                             {% else %}
-                            <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Agregar al
+                            <a href="{% url 'add_cart' un_producto.id %}" class="btn  btn-primary"> <span
+                                    class="text">Agregar al
                                     carrito
                                     cart</span> <i class="fas fa-shopping-cart"></i> </a>
                             {% endif %}
