--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -155,6 +155,7 @@
 
 
                 <nav class="mt-4" aria-label="Page navigation sample">
+                    {% if productos.has_other_pages %}
                     <ul class="pagination">
                         <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
                         <li class="page-item active"><a class="page-link" href="#">1</a></li>
@@ -162,6 +163,7 @@
                         <li class="page-item"><a class="page-link" href="#">3</a></li>
                         <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
                     </ul>
+                    {% endif %}
                 </nav>
 
             </main> <!-- col.// -->
