--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -148,20 +148,28 @@
                         </figure>
                     </div> <!-- col.// -->
                     {% endfor %}
-
-
-
                 </div> <!-- row end.// -->
-
 
                 <nav class="mt-4" aria-label="Page navigation sample">
                     {% if productos.has_other_pages %}
                     <ul class="pagination">
+                        {% if productos.has_previous %}
+                        <li class="page-item"><a class="page-link" href="?page={{productos.previous_page_number}}">Anterior</a></li>
+                        {% else %}
                         <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+                        {% endif %}
+                        {% for producto in productos.paginator.page_range  %}
+                        {% if productos.number == producto %}
+                        <li class="page-item active"><a class="page-link" href="?page={{producto}}">{{producto}}</a></li>
+                        {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{producto}}">{{producto}}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                        {% if productos.has_next %}
+                        <li class="page-item active"><a class="page-link" href="?page={{productos.next_page_number}}">Siguiente</a></li>
+                        {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#">Siguiente</a></li>
+                        {% endif %}
                     </ul>
                     {% endif %}
                 </nav>
