--- a/templates/store/producto_detalle.html
+++ b/templates/store/producto_detalle.html
@@ -17,62 +17,49 @@
                     </article> <!-- gallery-wrap .end// -->
                 </aside>
                 <main class="col-md-6 border-left">
-                    <article class="content-body">
-                        <h2 class="title">{{un_producto.nombre_producto}}</h2>
+                    <form action="{% url 'add_cart' un_producto.id %}" method="GET">
+                        <article class="content-body">
+                            <h2 class="title">{{un_producto.nombre_producto}}</h2>
 
-                        <div class="mb-3">
-                            <var class="price h4">{{un_producto.precio}}€</var>
-                        </div>
-                        <p>{{un_producto.descripcion_producto}}</p>
-                        <hr>
-                        <div class="row">
-                            <div class="item-option-select">
-                                <h6>Choose Color</h6>
-                                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Silver
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Gray
-                                    </label>
-                                    <label class="btn btn-light active">
-                                        <input type="radio" name="radio_color checked"> Gold
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Black
-                                    </label>
-                                </div>
+                            <div class="mb-3">
+                                <var class="price h4">{{un_producto.precio}}€</var>
                             </div>
-                        </div> <!-- row.// -->
-                        <div class="row">
-                            <div class="item-option-select">
-                                <h6>Select Size</h6>
-                                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> S
-                                    </label>
-                                    <label class="btn btn-light active">
-                                        <input type="radio" name="radio_color" checked> M
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> L
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> XL
-                                    </label>
+                            <p>{{un_producto.descripcion_producto}}</p>
+                            <hr>
+                            <div class="row">
+                                <div class="item-option-select">
+                                    <h6>Escoge un color</h6>
+                                    <select name="color" class="form-control">
+                                        <option value="rojo">Rojo</option>
+                                        <option value="azul">Azul</option>
+                                        <option value='verde'>Verde</option>
+                                    </select>
                                 </div>
-                            </div>
-                        </div> <!-- row.// -->
-                        <hr>
+                            </div> <!-- row.// -->
+                            <div class="row">
+                                <div class="item-option-select">
+                                    <h6>Selecciona una talla</h6>
+                                    <select name="talla">
+                                        <option value="s">S</option>
+                                        <option value="m">M</option>
+                                        <option value="x">X</option>
+                                        <option value="2x">2X</option>
+                                        <option value="3x">3x</option>
+                                        <option value="4x">4x</option>
+                                    </select>
+                                </div>
+                            </div> <!-- row.// -->
+                            <hr>
 
-                        {% if un_producto.stock < 1 %} <h5>Ups, no tenemos stock de este producto 😅</h5>
+                            {% if un_producto.stock < 1 %} <h5>Ups, no tenemos stock de este producto 😅</h5>
                             {% else %}
-                            <a href="{% url 'add_cart' un_producto.id %}" class="btn  btn-primary"> <span
-                                    class="text">Agregar al carrito
-                                </span> <i class="fas fa-shopping-cart"></i> </a>
-                            {% endif %}
+                            <button type="submit" class="btn  btn-primary"> <span
+                                                  class="text">Agregar al carrito
+                                </span> <i class="fas fa-shopping-cart"></i> </button>
+                                {% endif %}
 
-                    </article> <!-- product-info-aside .// -->
+                        </article> <!-- product-info-aside .// -->
+                    </form>
                 </main> <!-- col.// -->
             </div> <!-- row.// -->
         </div> <!-- card.// -->
@@ -99,9 +86,9 @@
                     </div> <!-- icontext.// -->
                     <div class="mt-3">
                         <p>
-                            Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip
                         </p>
                     </div>
                 </article>
