--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -38,7 +38,13 @@
                                         <figcaption class="info">
                                             <a href="#"
                                                class="title text-dark">{{cart_item.producto.nombre_producto}}</a>
-                                            <p class="text-muted small">Matrix: 25 Mpx <br> Marca: Canon</p>
+                                            <div class="text-muted small">
+                                                {% if cart_item.variaciones.all %}
+                                                {% for item in cart_item.variaciones.all %}
+                                                <p>{{item.categoria_variacion | capfirst}} : {{item.valores_variacion | capfirst}}</p>
+                                                {% endfor %}
+                                                {% endif %}
+                                            </div>
                                         </figcaption>
                                     </figure>
                                 </td>
