--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -144,7 +144,7 @@
                                         <span class="price">{{producto.precio}}€</span>
                                     </div> <!-- price-wrap.// -->
                                 </div>
-                                <a href="{% url 'add_cart' producto.id %}" class="btn btn-block btn-success">Añadir al carrito</a>
+                                <a href="{{producto.get_url}}" class="btn btn-block btn-success">Ver producto</a>
                             </figcaption>
                         </figure>
                     </div> <!-- col.// -->
